[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "umbi"
version = "0.1.19"
description = "Library for input/output of transition systems in a unified Markov binary (UMB) format."
readme = "README.md"
authors = [{name = "Roman Andriushchenko", email = "roman.andriu@gmail.com"}]
license = {file = "LICENSE"}
dependencies = [
  "click",
  "marshmallow",
  "marshmallow_oneofschema",
  "bitstring",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/randriu/umbi"

[project.optional-dependencies]
dev = [
  "pytest",
  "pip-tools",
  "black",
  "isort",
  "toml-sort",
  "twine",
  "bump-my-version",
]

[tool.setuptools]
packages = ["umbi", "umbi.ats", "umbi.binary", "umbi.io", "umbi.vectors"]
include-package-data = true

[project.scripts]
umbi = "umbi.__main__:main"

[tool.umbi]
format_version = 0
format_revision = 1

[tool.bumpversion]
current_version = "0.1.19"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "v{new_version}"
message = "bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
